# MoC-2023-Kripaka-Shashenok

./: .gitignore
lab1/: .gitignore  MOC #1.ipynb  MOC #1_Corrected.ipynb  MOC_#1.ipynb  Python_2023_fi32_Kripaka_Shsashenok.ipynb  Python_2023_fi32_Kripaka_Shsashenok.py  conditional_prob.csv  deterministic.csv  stochastic.csv
lab1/latex-report/: main.tex  stochastic_table.csv
lab1/latex-report/chapters/: main_part.tex  title.tex
lab2/: plan.md
lab2/report/chapters/: main_part.tex  title.tex
lab2/rust_pr/: .env  Cargo.toml
lab2/rust_pr/src/: criterions.rs  internals.rs  lib.rs  main.rs
lab2/rust_pr/src/criterions/: criterion_1_0.rs  criterion_1_0_own.rs  criterion_1_1.rs  criterion_1_1_own.rs  criterion_1_2.rs  criterion_1_2_own.rs  criterion_1_3.rs  criterion_1_3_own.rs  criterion_3_0.rs  criterion_4_0.rs  criterion_5_0.rs  criterion_5_1.rs  struct_bwt.rs  struct_deflate.rs  struct_lzma.rs
lab2/rust_pr/tmp/: bagriani6_1.txt  combined.txt  eneida.txt  filtered.txt  hari_potter1.txt  hari_potter2.txt  hari_potter3.txt  hari_potter4.txt  hari_potter5.txt  hari_potter6.txt  hari_potter7.txt  marysya_churay.txt  mirniy2.txt  misto76.txt  results_raw.txt  results_raw_2.txt  results_table.ods  skovoroda_vstupni_dveri.txt  ya_romantika.txt  zacharovana_desna.txt
lab3/lab3_rust/: Cargo.toml  code.txt
lab3/lab3_rust/src/: lib.rs  main.rs
lab3/report/chapters/: main_part.tex  title.tex
