[package]
name = "rust_pr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.10.2", features = [] }
dotenv = "0.15.0"
rayon = "1.8.0"
rand = "0.8.5"
lazy_static = { version = "1.4.0", features = [] }
chrono = {version = "0.4.31"}
deflate = "1.0.0"
compress = "0.2.1"
rust-lzma = "0.6.0"